coffeeshop/base/metrics/prometheus-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus-service
  namespace: coffeeshop-monitoring
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: prometheus-service.<INGRESS_ROUTER_HOSTNAME>
      http:
        paths:
          - path: /
            backend:
              serviceName: prometheus-operated
              servicePort: 9090
